--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 <header>
     <div class="header-logo">
         <figure>
-            <img src="" alt="Logo do site" href="./index.html">
+            <img src="./img/Outros recursos/logo.png" alt="Logo do site" href="./index.html">
         </figure>
     </div>
 
     <div class="header-menu">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><button href="./index.html/Caixas">Caixas</button></li>
+            <li><button href="./index.html/Pacotes">Pacotes</button></li>
+            <li><button href="./index.html/Cápsulas">Cápsulas</button></li>
         </ul>
     </div>
 
@@ -30,8 +29,151 @@
 
 <body>
     <main>
+        <div class="Caixas">
+            
+            <div class="card-caixa">
+                <figure>
+                    <img src="./img/Caixas/sonhos e pesadelos.jpg" alt="">
+                </figure>
+
+                <h3>Caixa dos Sonhos e Peadelos</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="caixa-luck">Lucky?</button>
+            </div>
+
+            <div class="card-caixa">
+                <figure>
+                    <img src="./img/Caixas/aperto.png" alt="">
+                </figure>
+
+                <h3>Caixa do Aperto</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="caixa-luck">Lucky?</button>
+            </div>
+
+            <div class="card-caixa">
+                <figure>
+                    <img src="./img/Caixas/hydra.png" alt="">
+                </figure>
+
+                <h3>Caixa da Operação Hydra</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="caixa-luck">Lucky?</button>
+            </div>
+
+        </div>
+
+
+        <div class="Pacotes">
+
+            <div class="card-pacote">
+                <figure>
+                    <img src="./img/Pacotes/anubis.png" alt="">
+                </figure>
+
+                <h3>Pacote da Coleção Anúbis</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="pacote-luck">Lucky?</button>
+            </div>
+
+            <div class="card-pacote">
+                <figure>
+                    <img src="./img/Pacotes/emblemas.png" alt="">
+                </figure>
+
+                <h3>Pacote de Emblemas do CS:GO</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="pacote-luck">Lucky?</button>
+            </div>
+
+            <div class="card-pacote">
+                <figure>
+                    <img src="./img/Pacotes/p250.png" alt="">
+                </figure>
+
+                <h3>Pacote de P250 Raio-X</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="pacote-luck">Lucky?</button>
+            </div>
+
+        </div>
+
+
+        <div class="Cápsulas">
+
+            <div class="card-capsula">
+                <figure>
+                    <img src="./img/Cápsulas/10birthday.png" alt="">
+                </figure>
+
+                <h3>Cápsula de Adesivos de 10 anos</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="capsula-luck">Lucky?</button>
+            </div>
+
+            <div class="card-capsula">
+                <figure>
+                    <img src="./img/Cápsulas/halo.png" alt="">
+                </figure>
+
+                <h3>Cápsula de Adesivos Halo</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="capsula-luck">Lucky?</button>
+            </div>
+
+            <div class="card-capsula">
+                <figure>
+                    <img src="./img/Cápsulas/sugarface.png" alt="">
+                </figure>
+
+                <h3>Cápsula de Adesivos Rostos Açucarados</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aut incidunt, 
+                    ad et ab sint quia libero cum totam sequi odio a, magnam esse accusamus. Veniam 
+                    porro quasi hic a?
+                </p>
+                <button class="capsula-luck">Lucky?</button>
+            </div>
+
+        </div>
 
     </main>
+
+    <section class="Lucky">
+        
+    </section>
 </body>
 
 <footer>
@@ -39,7 +181,7 @@
         <h4 href="">Termos de uso</h4>
         <h4 href="">Sobre nós</h4>
         <figure>
-            <img src="" alt="Logo do site">
+            <img src="./img/Outros recursos/logo.png" alt="Logo do site">
         </figure>
     </div>
 
