--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
         <h4 href="">cslucky.support@gmail.com</h4>
 
         <figure>
-            <img src="" alt="" href="">
+            <img src="./img/Outros recursos/Facebook.png" alt="Acesse nosso Facebook" href="">
         </figure>
         <figure>
-            <img src="" alt="" href="">
+            <img src="./img/Outros recursos/Intagram.png" alt="Acesse nosso Intagram" href="">
         </figure>
         <figure>
-            <img src="" alt="" href="">
+            <img src="./img/Outros recursos/X.png" alt="" href="Acesse nosso X">
         </figure>
         <figure>
-            <img src="" alt="" href="">
+            <img src="./img/Outros recursos/valve.png" alt="Fale com a Valve" href="">
         </figure>
     </div>
 </footer>
