--- a/logform.html
+++ b/logform.html
@@ -9,20 +9,20 @@
 <header>
     <div class="header-logo">
         <figure>
-            <img src="" alt="Logo do site" href="./index.html">
+            <img src="./img/Outros recursos/logo.png" alt="Logo do site" href="./index.html">
         </figure>
     </div>
 
     <div class="header-menu">
         <ul>
-            <li>Caixas</li>
-            <li>Pacotes</li>
-            <li>Cápsulas</li>
+            <li><button href="./index.html/Caixas">Caixas</button></li>
+            <li><button href="./index.html/Pacotes">Pacotes</button></li>
+            <li><button href="./index.html/Cápsulas">Cápsulas</button></li>
         </ul>
     </div>
 
-    <div class="cad-button">
-        <button class="Cadastrar" href="">Cadastrar</button>
+    <div class="login-button">
+        <button class="login" href="./logform.html">Login</button>
     </div>
 </header>
 
@@ -37,7 +37,7 @@
         <h4 href="">Termos de uso</h4>
         <h4 href="">Sobre nós</h4>
         <figure>
-            <img src="" alt="Logo do site">
+            <img src="./img/Outros recursos/logo.png" alt="Logo do site">
         </figure>
     </div>
 
@@ -46,16 +46,16 @@
         <h4 href="">cslucky.support@gmail.com</h4>
 
         <figure>
-            <img src="" alt="" href="">
+            <img src="./img/Outros recursos/Facebook.png" alt="Acesse nosso Facebook" href="">
         </figure>
         <figure>
-            <img src="" alt="" href="">
+            <img src="./img/Outros recursos/Intagram.png" alt="Acesse nosso Intagram" href="">
         </figure>
         <figure>
-            <img src="" alt="" href="">
+            <img src="./img/Outros recursos/X.png" alt="" href="Acesse nosso X">
         </figure>
         <figure>
-            <img src="" alt="" href="">
+            <img src="./img/Outros recursos/valve.png" alt="Fale com a Valve" href="">
         </figure>
     </div>
 </footer>
